GNOME Bugzilla – Bug 720275
webdav backend does not handle hidden files
Last modified: 2013-12-12 16:38:35 UTC
It does not set the is_hidden attribute like most of the other backends do which means that dotfiles show up when browsing in Nautilus.
Created attachment 263997 [details] [review] dav: Set the is_hidden property for files starting with a '.'
Review of attachment 263997 [details] [review]: Looks good, thanks!
Pushed to master as 20f1c7197173816490a6196c776793d77791e1f1. Thanks!