dav: Set the is_hidden property for files starting with a '.'

https://bugzilla.gnome.org/show_bug.cgi?id=720275